-
Bug
-
Resolution: Fixed
-
P2
-
8, 11, 14, 15
-
b18
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246537 | 14u-cpu | Roland Westrelin | P2 | Resolved | Fixed | master |
| JDK-8246394 | 14.0.2 | Roland Westrelin | P2 | Closed | Fixed | b09 |
| JDK-8247232 | 13.0.4 | Roland Westrelin | P2 | Resolved | Fixed | b05 |
| JDK-8243399 | 11.0.8-oracle | Roland Westrelin | P2 | Closed | Fixed | b04 |
| JDK-8244176 | 11.0.8 | Roland Westrelin | P2 | Resolved | Fixed | b02 |
| JDK-8296311 | 8u371 | Daniel Skantz | P2 | Closed | Fixed | b01 |
TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC" make CONF=linux-aarch64-server-fastdebug run-test TEST=java/util/NavigableMap/LockStep.java
Always reproducible.
- backported by
-
JDK-8244176 Loop unswitching may cause dependence on null check to be lost
-
- Resolved
-
-
JDK-8246537 Loop unswitching may cause dependence on null check to be lost
-
- Resolved
-
-
JDK-8247232 Loop unswitching may cause dependence on null check to be lost
-
- Resolved
-
-
JDK-8243399 Loop unswitching may cause dependence on null check to be lost
-
- Closed
-
-
JDK-8246394 Loop unswitching may cause dependence on null check to be lost
-
- Closed
-
-
JDK-8296311 Loop unswitching may cause dependence on null check to be lost
-
- Closed
-
- relates to
-
JDK-8242379 [TESTBUG] compiler/loopopts/TestLoopUnswitchingLostCastDependency.java fails with release VMs
-
- Resolved
-
-
JDK-8242108 Performance regression after fix for JDK-8229496
-
- Resolved
-