8241900: Loop unswitching may cause dependence on null check to be lost

Reviewed-by: thartmann, kvn