src/hotspot/share/opto/loopUnswitch.cpp
@@ -221,11 +221,11 @@ void PhaseIdealLoop::do_unswitching(IdealLoopTree *loop, Node_List &old_new) {
 
   // Hardwire the control paths in the loops into if(true) and if(false)
   _igvn.rehash_node_delayed(unswitch_iff);
-  short_circuit_if(unswitch_iff, proj_true);
+  dominated_by(proj_true, unswitch_iff, false, false);
 
   IfNode* unswitch_iff_clone = old_new[unswitch_iff->_idx]->as_If();
   _igvn.rehash_node_delayed(unswitch_iff_clone);
-  short_circuit_if(unswitch_iff_clone, proj_false);
+  dominated_by(proj_false, unswitch_iff_clone, false, false);
 
   // Reoptimize loops
   loop->record_for_igvn();
